# altar

./: .gitignore  CMakeLists.txt  MEMO
.cmake/: FindPYRE.cmake  FindPYRECUDA.cmake  altar_cdm.cmake  altar_cudaframework.cmake  altar_cudalinear.cmake  altar_framework.cmake  altar_init.cmake  altar_mogi.cmake  altar_seismic.cmake  altar_sir.cmake
.mm/: altar.mm  cudaaltar.def  cudalinear.def  seismic.def
altar/: __init__.py  meta.py.in
altar/altar/: __init__.py
altar/altar/bayesian/: Annealer.py  COV.py  H5Recorder.py  MPIAnnealing.py  Metropolis.py  __init__.py
altar/altar/data/: DataL2.py  DataObs.py  __init__.py
altar/altar/models/: BayesianL2.py  __init__.py
altar/altar/norms/: L2.py
altar/altar/shells/: AlTar.py  cudaApplication.py
altar/altar/simulations/: Job.py
altar/bayesian/: Annealer.py  AnnealingMethod.py  COV.py  CUDAAnnealing.py  CoolingStep.py  MPIAnnealing.py  Metropolis.py  Recorder.py  __init__.py
altar/cuda/: __init__.py  meta
altar/cuda/bayesian/: __init__.py  cudaAdaptiveMetropolis.py  cudaCoolingStep.py  cudaMetropolis.py  cudaMetropolisVaryingSteps.py
altar/cuda/data/: __init__.py  cudaDataL2.py
altar/cuda/distributions/: __init__.py  cudaDistribution.py  cudaGaussian.py  cudaPreset.py  cudaTGaussian.py  cudaUniform.py
altar/cuda/ext/: __init__.py
altar/cuda/models/: __init__.py  cudaBayesian.py  cudaBayesianEnsemble.py  cudaParameterEnsemble.py  cudaParameterSet.py
altar/cuda/norms/: __init__.py  cudaL2.py
altar/data/: DataL2.py  DataObs.py  __init__.py
altar/ext/: __init__.py  condition.h
altar/models/: Bayesian.py  Model.py  Null.py  ParameterSet.py  __init__.py
altar/shells/: AlTar.py  __init__.py  cudaApplication.py
altar/simulations/: Job.py  Recorder.py
cuda/: CMakeLists.txt
cuda/bayesian/: cudaAdaptiveMetropolis.py  cudaMetropolis.py
cuda/cuda/: __init__.py
cuda/cuda/bayesian/: cudaCoolingStep.py
cuda/cuda/distributions/: __init__.py  cudaGaussian.py  cudaTGaussian.py  (+1 more)
cuda/distributions/: cudaDistribution.py
cuda/ext/: capsules.h  cudaaltar.cc  distributions.cc  distributions.h  metadata.h  metropolis.cc  metropolis.h  norm.cc  norm.h
cuda/models/: cudaBayesian.py  cudaBayesianEnsemble.py
cuda/norms/: __init__.py
cudaext/: capsules.h  cudaaltar.cc  distributions.cc  distributions.h  metadata.cc  metadata.h  metropolis.cc  metropolis.h  norm.cc  norm.h
examples/jupyter/: linear.ipynb
ext/: altar.cc  condition.cc  condition.h  dbeta.cc  dbeta.h  distributions.cc  distributions.h
models/cudalinear/: CMakeLists.txt
models/regression/: CMakeLists.txt
models/seismic/: CMakeLists.txt
models/sir/: CMakeLists.txt
(+112 files in other folders)
